# PPP

lab2/lab2/: lab2.cpp  lab2.vcxproj
lab4/lib/: ArrayIntegerChannel.h  BinarySemaphore.cpp  BinarySemaphore.h  Constants.h  Signal.cpp  Signal.h  helper.h
lab4/mutliApps/: CMakeLists.txt  run.cmd  runAndLogToFile.cmd
lab4/mutliApps/coach/: CMakeLists.txt  main.cpp
lab4/mutliApps/defender/: CMakeLists.txt  main.cpp
lab4/mutliApps/doctor/: CMakeLists.txt  main.cpp
lab4/mutliApps/footballField/: CMakeLists.txt  main.cpp
lab4/mutliApps/forward/: CMakeLists.txt  main.cpp
lab4/mutliApps/goalkeeper/: CMakeLists.txt  main.cpp
lab4/mutliApps/lib/: ArrayIntegerChannel.cpp  ArrayIntegerChannel.h  BinarySemaphore.cpp  Constants.h  IntegerChannel.cpp  IntegerChannel.h  IntegerSemaphore.cpp  IntegerSemaphore.h  Message.h  helper.cpp  myrandom.h
lab4/singleApp/singleApp/: CMakeLists.txt  coach.h  defender.h  doctor.h  footballField.h  forward.h  goalkeeper.h  singleApp.cpp  singleApp.sln  singleApp.vcxproj  singleApp.vcxproj.filters
lab4/singleApp/singleApp/lib/: ArrayIntegerChannel.cpp  ArrayIntegerChannel.h  BinarySemaphore.cpp  BinarySemaphore.h  IntegerChannel.cpp  IntegerChannel.h  Signal.h
lab4/логи работы/1 приложение/: лог 10 игр.txt  лог 2 игры.txt
lab4/логи работы/несколько приложений/неожиданное завершение Доктора/: coach.txt  defender.txt  doctor.txt  footballField.txt  forward.txt  goalkeeper.txt
lab4/логи работы/несколько приложений/неожиданное завершение Тренера/: coach.txt  defender.txt  doctor.txt  footballField.txt  forward.txt  goalkeeper.txt
lab4/логи работы/несколько приложений/успешное завершение/: coach.txt  defender.txt  doctor.txt  footballField.txt  forward.txt  goalkeeper.txt
lab5/lab2/lab2/: lab2.cpp  lab2.sln  lab2.vcxproj
lab8/lab2/: Source.cpp  lab2.cpp
